Another recent commit with modification added on template

--- a/.env
+++ b/.env
@@ -36,5 +36,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
- MAILER_DSN=smtp://user:mandoupam@gmail.com:25
+ MAILER_DSN=smtp://1f7ccb4f52287e:c5cde734680043@smtp.mailtrap.io:2525
 ###< symfony/mailer ###
