--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,12 @@
 parameters:
 
 services:
+
+    App\EventListener\ModuleStatusChangeListener:
+
+        tags: ['kernel.event_subscriber']
+            
+    
     # Command to test the cron in the console
     App\Command\PersistDataCommand:
         tags: ['console.command']
@@ -16,7 +22,7 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-
+        
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
